--- a/Trayecto-main/index.html
+++ b/Trayecto-main/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css 1.css">
     <!-- UTF8 caracteres especiales dentro de la pagina -->
     <meta charset="UTF-8">
     <!-- compatible con el explorador edge -->
@@ -22,7 +22,7 @@
     </nav>
     <section>
         <hr>
-        <b>Primera practica</b> si
+        <b>Primera practica</b> cy
     <hr>
     <section>
         <div>
@@ -42,10 +42,10 @@
     </section>
     <div id="imagenes">
         <!-- src va a traerme los objetos-->
-        <img src="Imagen/ay marge.jpg" alt="1" width="150px" height="150px">
-        <img src="Imagen/padre domingo.jpg" alt="2" width="150px" height="150px"> 
-        <img src="Imagen/padre domingo.jpg" alt="2" width="150px" height="150px">
-        <img src="Imagen/ay marge.jpg" alt="2" width="150px" height="150px">
+        <img src="Img/spidelman.jpg" alt="1" width="150px" height="150px" class="efecto">
+        <img src="Img/neko.jpg" alt="2" width="150px" height="150px" class="efecto"> 
+        <img src="Img/girasol.jpg" alt="2" width="150px" height="150px" class="efecto">
+        <img src="Img/ai ohto.jpg" alt="2" width="150px" height="150px" class="efecto">
     </div>
     <section>
 
